"""
MediSebi — Climate Alert Model
================================
Stores weather-based health risk alerts generated by the Climate-Disease Engine.
Maps OpenWeather API data to disease risk predictions with recommended actions.
"""

from sqlalchemy import String, Integer, Float, DateTime, Text, ForeignKey, Index, Enum as SQLEnum
from sqlalchemy.orm import Mapped, mapped_column, relationship
from datetime import datetime
import enum

from app.core.database import Base
from app.core.mixins import TimestampMixin


class RiskLevel(str, enum.Enum):
    """Severity of a climate-based health risk alert."""
    LOW = "low"
    MODERATE = "moderate"
    HIGH = "high"
    CRITICAL = "critical"


class ClimateAlert(Base, TimestampMixin):
    """
    Climate-driven health intelligence alerts.
    Generated when OpenWeather data shows conditions that correlate with
    specific disease patterns (e.g., high temp + humidity → Dengue risk).
    """
    __tablename__ = "climate_alerts"
    __table_args__ = (
        Index("ix_climate_alert_shop", "shop_id"),
        Index("ix_climate_alert_risk", "risk_level"),
        Index("ix_climate_alert_date", "created_at"),
        {
            "comment": (
                "Weather-based health risk alerts. Produced by the Climate-Disease Engine "
                "and consumed by the dashboard for proactive stocking decisions."
            ),
        },
    )

    id: Mapped[int] = mapped_column(
        primary_key=True,
        autoincrement=True,
    )

    # ── Location ────────────────────────────────────────────
    shop_id: Mapped[int] = mapped_column(
        Integer,
        ForeignKey("shops.id", ondelete="CASCADE"),
        nullable=False,
        comment="Shop location affected by this climate alert",
    )
    city: Mapped[str] = mapped_column(
        String(100),
        nullable=False,
        comment="City name from the weather data",
    )

    # ── Weather Data Snapshot ───────────────────────────────
    temperature_c: Mapped[float] = mapped_column(
        Float(4, 2),
        nullable=False,
        comment="Temperature in Celsius at time of alert generation",
    )
    humidity_pct: Mapped[float] = mapped_column(
        Float(5, 2),
        nullable=False,
        comment="Relative humidity percentage",
    )
    weather_condition: Mapped[str | None] = mapped_column(
        String(100),
        nullable=True,
        comment="OpenWeather condition description (e.g., 'Light rain')",
    )

    # ── Risk Assessment ─────────────────────────────────────
    risk_level: Mapped[RiskLevel] = mapped_column(
        nullable=False,
        comment="Severity classification of the health risk",
    )
    disease_risk: Mapped[str] = mapped_column(
        String(100),
        nullable=False,
        comment="Predicted disease (e.g., 'Dengue', 'Cholera', 'Heat Stroke')",
    )
    recommended_salts: Mapped[str | None] = mapped_column(
        Text,
        nullable=True,
        comment="JSON array of salt_ids recommended for proactive stocking",
    )
    recommended_medicines: Mapped[str | None] = mapped_column(
        Text,
        nullable=True,
        comment="JSON array of medicine_ids recommended for proactive stocking",
    )
    action_summary: Mapped[str | None] = mapped_column(
        Text,
        nullable=True,
        comment="Human-readable summary of recommended actions",
    )

    # ── Weather API Reference ───────────────────────────────
    weather_api_response: Mapped[str | None] = mapped_column(
        Text,
        nullable=True,
        comment="Raw JSON response from OpenWeather API (for debugging/auditing)",
    )

    def __repr__(self) -> str:
        return (
            f"<ClimateAlert id={self.id} city='{self.city}' "
            f"risk={self.risk_level.value} disease='{self.disease_risk}'>"
        )
