"""
MediSebi — Stock Transfer Request Model
=========================================
Tracks redistribution requests generated by the Smart Redistribution Engine.
When Shop A has excess stock nearing expiry and Shop B has a shortage,
the system generates a transfer request to optimize distribution.
"""

from sqlalchemy import String, Integer, Float, ForeignKey, DateTime, Text, Enum as SQLEnum, Index
from sqlalchemy.orm import Mapped, mapped_column, relationship
from datetime import datetime
import enum

from app.core.database import Base
from app.core.mixins import TimestampMixin


class TransferStatus(str, enum.Enum):
    """Lifecycle states of a stock transfer request."""
    PENDING = "pending"          # Generated by the engine, awaiting admin approval
    APPROVED = "approved"        # Admin has approved the transfer
    IN_TRANSIT = "in_transit"    # Physical transfer is in progress
    COMPLETED = "completed"      # Transfer confirmed by receiving shop
    REJECTED = "rejected"        # Transfer was denied
    CANCELLED = "cancelled"      # Cancelled after approval


class TransferPriority(str, enum.Enum):
    """Priority levels based on urgency of the receiving shop's shortage."""
    LOW = "low"
    MEDIUM = "medium"
    HIGH = "high"
    CRITICAL = "critical"        # Immediate action required — critical medicine shortage


class StockTransferRequest(Base, TimestampMixin):
    """
    Redistribution engine output. Each record represents a suggested
    or approved stock transfer between two shops in the network.
    """
    __tablename__ = "stock_transfer_requests"
    __table_args__ = (
        Index("ix_transfer_from", "from_shop_id"),
        Index("ix_transfer_to", "to_shop_id"),
        Index("ix_transfer_status", "status"),
        Index("ix_transfer_med", "med_id"),
        {
            "comment": (
                "Stock redistribution requests generated by the Smart Redistribution Engine. "
                "Tracks the full lifecycle: suggestion → approval → transit → completion."
            ),
        },
    )

    id: Mapped[int] = mapped_column(
        primary_key=True,
        autoincrement=True,
    )

    # ── Entities ────────────────────────────────────────────
    from_shop_id: Mapped[int] = mapped_column(
        Integer,
        ForeignKey("shops.id", ondelete="RESTRICT"),
        nullable=False,
        comment="Source shop with excess stock",
    )
    to_shop_id: Mapped[int] = mapped_column(
        Integer,
        ForeignKey("shops.id", ondelete="RESTRICT"),
        nullable=False,
        comment="Destination shop with shortage",
    )
    med_id: Mapped[int] = mapped_column(
        Integer,
        ForeignKey("medicines.id", ondelete="RESTRICT"),
        nullable=False,
        comment="Medicine being transferred",
    )
    inventory_id: Mapped[int | None] = mapped_column(
        Integer,
        ForeignKey("inventory.id", ondelete="SET NULL"),
        nullable=True,
        comment="Specific inventory batch being transferred",
    )

    # ── Transfer Details ────────────────────────────────────
    quantity_requested: Mapped[int] = mapped_column(
        Integer,
        nullable=False,
        comment="Number of units proposed for transfer",
    )
    quantity_transferred: Mapped[int | None] = mapped_column(
        Integer,
        nullable=True,
        comment="Actual number of units transferred (may differ after approval)",
    )
    reason: Mapped[str | None] = mapped_column(
        Text,
        nullable=True,
        comment="System-generated explanation for why this transfer was recommended",
    )
    priority: Mapped[TransferPriority] = mapped_column(
        default=TransferPriority.MEDIUM,
        nullable=False,
        comment="Urgency level based on destination shop's shortage severity",
    )

    # ── Lifecycle ───────────────────────────────────────────
    status: Mapped[TransferStatus] = mapped_column(
        default=TransferStatus.PENDING,
        nullable=False,
        comment="Current state of the transfer request",
    )
    approved_by: Mapped[int | None] = mapped_column(
        Integer,
        ForeignKey("users.id", ondelete="SET NULL"),
        nullable=True,
        comment="Admin who approved the transfer",
    )
    approved_at: Mapped[datetime | None] = mapped_column(
        DateTime(timezone=True),
        nullable=True,
        comment="Timestamp of admin approval",
    )
    completed_at: Mapped[datetime | None] = mapped_column(
        DateTime(timezone=True),
        nullable=True,
        comment="Timestamp of physical transfer completion",
    )

    # ── Relationships ───────────────────────────────────────
    from_shop = relationship(
        "Shop",
        foreign_keys=[from_shop_id],
        back_populates="transfer_requests_from",
        lazy="joined",
    )
    to_shop = relationship(
        "Shop",
        foreign_keys=[to_shop_id],
        back_populates="transfer_requests_to",
        lazy="joined",
    )

    def __repr__(self) -> str:
        return (
            f"<StockTransfer id={self.id} {self.from_shop_id}→{self.to_shop_id} "
            f"qty={self.quantity_requested} status={self.status.value}>"
        )
